--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,6 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 /basecode.iml
+/.idea/vcs.xml
+/project.iml
+/.idea/misc.xml
